         'Interface II' to 'Interface 2' in comments and documentation (Stuart).
20130103 configure.ac: make some URLs point to the new sourceforge forge and
         update copyright date to 2013 (Sergio).
20130103 configure.ac: add trailing slash to URL of bug tracker (Stuart).
20130126 accessor.pl,doc/libspectrum.txt,snap_accessors.txt,snapshot.c,szx.c:
         add support for storing ZX Printer state (bug #274) (Fred).
20130130 timings.c: correct video timing for +2A/+3 etc machines (part of
         patch #305).
20130307 accessor.pl,snap_accessors.txt,szx.c: implement Spectranet's "suppress
         NMI" flipflop (bug #259).
20130516 Makefile.am: update library version number for 1.1 release.
20130516 doc/libspectrum.3: update version number and date for 1.1 release.
20130516 ChangeLog: update date in main changelog.
20130517 README: update one more date for the 1.1 release.
20130518 doc/libspectrum.txt: update version number for 1.1 release (Sergio).
20130524 Makefile.am: update libtool age to support binaries built against
         libspectrum 1.0.0 (Stuart).
20130526 Makefile.am: add dll.c into the dist tarball (Sergio).
20130928 configure.ac: use 'subdir-objects' option as advised by automake 1.14
         to place object files in subdirectories (Sergio).
20131013 configure.ac: replace obsolete ac_cv_prog_gcc with ac_cv_c_compiler_gnu
         (Sergio).
20131215 rzx.c: fix snapshot insertion in rzx recordings (Sergio).
20140113 libspectrum.h.in,rzx.c: allow to finalise rzx recordings (part of bug
         #305) (Sergio).
20140210 rzx.c: use SZX format for interspersed snapshots in RZX recordings
         (part of bug #304) (Sergio).
20140504 tape.c: ensure that we have an edge at the end of a tape to ensure that
         the last pulse is terminated - fixes loading of Moon Cresta (thanks,
         Lee Tonks) (Fred).
20141230 szx.c: guard against passing a NULL pointer to memcpy in
         write_if1_chunk() (thanks, clang static analyser) (Fred).