@@ -28,6 +28,9 @@ set -e
 
 aclocal -I m4
 autoheader
-libtoolize --automake
+# Mac OS X: Use glibtoolize instead
+(glibtoolize --version) < /dev/null > /dev/null 2>&1 && LIBTOOLIZE=glibtoolize \
+  || LIBTOOLIZE=libtoolize
+$LIBTOOLIZE --automake
 automake --add-missing
 autoconf
